# clawdboz

./: .bots.md  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE_CODE_INTEGRATION.md  DASHSCOPE_CLAUDE_SETUP.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MCP_FEISHU_FILE_USAGE.md  README.md  SKILL.md  TESTING.md  bot0.py  bot_cli.py  bot_manager.sh  clawdboz.py  cli_chat.py  cli_send.py  cli_tail.py  cmd  config.json  config.json.backup  config.json.example  config_dashscope_example.json  demo_web_chat.py  mcp_feishu_file_server.py  pyproject.toml  requirements.txt  setup_dashscope_claude.py  start_all.sh  start_bot_with_web.py  start_web.py  test-todo.md  test_acp_direct.py  test_bot_connection.py  test_cli.py  test_group_logic.py  test_install.sh  test_kernels.py  test_markdown.py  (+10 more)
.agents/skills/local-memory/: SKILL.md
.agents/skills/web-auth-session/: SKILL.md
.claude/skills/: crawl4ai
.kimi/: mcp.json  mcp_feishu_file.json
WORKPLACE/: test_fix.py
clawdboz/: __init__.py  acp_client.py  bot.py  bot_manager.py  claude_config.py  cli.py  cli_client.py  cli_server.py  config.py  handlers.py  kernel_commands.py  kernel_manager.py  main.py  session_manager.py  simple_bot.py
clawdboz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
clawdboz/.kimi/: mcp.json  mcp_feishu_file.json
clawdboz/templates/: .bots.md  bot_manager.sh
clawdboz/web/: __init__.py  mcp_server.py  server.py
docs/: 3DayPlan.md  ARCHITECTURE.md  PRJ.md  feishu_permissions.json
feishu_tools/: mcp_feishu_file_server.py  mcp_feishu_msg_server.py  notify_feishu.py
scripts/: bump_version.py
src/: __init__.py  acp_client.py  bot.py  config.py  main.py
test_script/: analyze_message_types.py  diagnose_feishu.py  test_acp_direct.py  test_card_structure.py  test_chat_history.py  test_chat_history2.py  test_chat_history_10.py  test_chat_history_with_images.py  test_download_file.py  test_download_image.py  test_download_image2.py  test_exit_code.sh  test_exit_code_python.py  test_image_api.py  test_markdown.py  test_mcp_streaming.py  test_prompt_format.py  test_prompt_format2.py  test_prompt_logging.py  test_redink_mcp.py  test_reply.py  test_shell_fail.py
tests/: e2e_test.py  test_bot_manager.py  test_session_switch.py  test_web_auto.py  test_web_e2e_existing.py  test_web_e2e_playwright.py  test_web_performance.py  test_web_server.py
(+31 files in other folders)
