[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawdboz"
version = "3.5.0"
description = "嗑唠的宝子 - 基于 ACP 协议的多 Agent 智能飞书机器人，支持 Kimi、OpenCode、Claude Code、OpenClaw、Hermes 等多种 Agent"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Clawdboz Team", email = "clawdboz@example.com"}
]
keywords = ["feishu", "lark", "bot", "kimi", "ai", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "lark-oapi>=1.5.0",
    "requests>=2.28.0",
    "python-socks>=2.0.0",
    "pysocks>=1.7.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
clawdboz = "clawdboz.cli:main"

[project.urls]
Homepage = "https://github.com/clawdboz/clawdboz"
Repository = "https://github.com/clawdboz/clawdboz"
Documentation = "https://github.com/clawdboz/clawdboz/blob/main/README.md"
Issues = "https://github.com/clawdboz/clawdboz/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["clawdboz*", "feishu_tools*"]
exclude = ["tests*", "docs*", "test_script*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
clawdboz = [
    "VERSION",
    "*.md", 
    "*.json", 
    ".agents/**/*.json", 
    ".agents/**/*.md",
    ".agents/**/*.py",
    "templates/*", 
    "templates/**/*",
    # Whitelist built-in skills (auto-test excluded)
    ".agents/skills/find-skills/*",
    ".agents/skills/local-memory/*",
    ".agents/skills/scheduler/*"
]

[tool.setuptools.exclude-package-data]
clawdboz = [
    # Explicitly exclude auto-test skill
    ".agents/skills/auto-test/*"
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
